# bzlmod-ws-dual-with-cpp-deps

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
cpp_app/: BUILD
cpp_app/src/main/: hello.cc  hello.h  main.cc
cpp_app/src/test/: hello_test.cc
java_app/: BUILD
java_app/src/main/java/com/example/: App.java
java_app/src/test/java/com/example/: AppTestNg.java
